--- a/My_Portfolio/New_Portfolio/index.html
+++ b/My_Portfolio/New_Portfolio/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content=""IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Anubhav Pandey </title>
+        <title>Anubhav Pandey Portfolio </title>
 
         <!--box icons-->
         <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
                     <a href="https://github.com/smash07-batman"><i class="bx bxl-github"></i> </a>
                     <a href="https://youtube.com/@smashbgmi185?si=ViFYpNOEmgCCqDNj"> <i class="bx bxl-youtube"></i> </a>
                 </div>
-                <a href ="AnubhavResume.pdf" class="btn" download >Download Resume</a>
+                <a href ="Anubhav_Pandey_Resume.pdf" class="btn" download >Download Resume</a>
 
             </div>
 
